--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
         .btn-submit:hover { background: #991b1b; transform: translateY(-2px); }
         .loading-overlay { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(255,255,255,0.8); z-index: 9999; justify-content: center; align-items: center; }
 
-        /* Step Progress Bar Styling */
         .status-stepper { display: flex; justify-content: space-between; position: relative; margin: 25px 0; padding: 0 5px; }
         .status-stepper::before { content: ''; position: absolute; top: 15px; left: 10%; right: 10%; height: 2px; background: #cbd5e1; z-index: 1; }
         .step { position: relative; z-index: 2; text-align: center; cursor: pointer; flex: 1; }
@@ -49,12 +48,12 @@
             <h5 class="section-title">1. รายงานสถานการณ์เริ่มแผน</h5>
             <div class="row g-3">
                 <div class="col-md-6">
-                    <label class="form-label fw-bold">หน่วยงานที่เกิดเหตุ</label>
+                    <label class="form-label fw-bold">หน่วยงานที่เกิดเหตุ <span class="text-danger">*</span></label>
                     <select class="form-select unit-selector" id="source_unit" required></select>
                 </div>
                 <div class="col-md-3 col-6">
                     <label class="form-label">ผู้ประสานงาน</label>
-                    <input type="text" class="form-control" id="coordinator" placeholder="ชื่อ-นามสกุล" required>
+                    <input type="text" class="form-control" id="coordinator" placeholder="ชื่อ-นามสกุล">
                 </div>
                 <div class="col-md-3 col-6">
                     <label class="form-label">เบอร์โทร</label>
@@ -80,7 +79,7 @@
             <h6 class="text-danger fw-bold">🔴 ผู้ป่วยหนัก (สีแดง)</h6>
             <div class="row g-2">
                 <div class="col-3"><input type="number" class="form-control qty" placeholder="ราย"></div>
-                <div class="col-9"><select class="form-select dest-selector dest"></select></div>
+                <div class="col-9"><select class="form-select dest-selector dest" id="red_dest"></select></div>
                 <div class="col-12"><input type="text" class="form-control mt-1 note" placeholder="อุปกรณ์ที่ต้องการ / Note"></div>
             </div>
         </div>
@@ -89,7 +88,7 @@
             <h6 class="text-warning fw-bold">🟡 ผู้ป่วยต้องได้รับการช่วยเหลือ (สีเหลือง)</h6>
             <div class="row g-2">
                 <div class="col-3"><input type="number" class="form-control qty" placeholder="ราย"></div>
-                <div class="col-9"><select class="form-select dest-selector dest"></select></div>
+                <div class="col-9"><select class="form-select dest-selector dest" id="yellow_dest"></select></div>
                 <div class="col-12"><input type="text" class="form-control mt-1 note" placeholder="อุปกรณ์ที่ต้องการ / Note"></div>
             </div>
         </div>
@@ -98,7 +97,7 @@
             <h6 class="text-success fw-bold">🟢 ผู้ป่วยช่วยเหลือตัวเองได้ (สีเขียว)</h6>
             <div class="row g-2">
                 <div class="col-3"><input type="number" class="form-control qty" placeholder="ราย"></div>
-                <div class="col-9"><select class="form-select dest-selector dest"></select></div>
+                <div class="col-9"><select class="form-select dest-selector dest" id="green_dest"></select></div>
                 <div class="col-12"><input type="text" class="form-control mt-1 note" placeholder="อุปกรณ์ที่ต้องการ / Note"></div>
             </div>
         </div>
@@ -190,8 +189,26 @@
     });
 
     function initSelectors() {
-        $('.unit-selector').select2({ data: unitList.map(u => ({id: u, text: u})), placeholder: "-- ค้นหารหัสหน่วยงาน --", allowClear: true });
-        $('.dest-selector').select2({ data: unitList.map(u => ({id: u, text: u})), tags: true, placeholder: "-- ระบุจุดหมาย --" });
+        // เตรียมข้อมูลหน่วยงานแบบมีค่าว่างข้างหน้า
+        const dataOptions = [
+            { id: '', text: '' }, // เพิ่มบรรทัดว่างเป็นค่าเริ่มต้น
+            ...unitList.map(u => ({id: u, text: u}))
+        ];
+
+        // 1. ตัวเลือกหน่วยงานต้นทาง (บังคับเลือก)
+        $('.unit-selector').select2({ 
+            data: dataOptions, 
+            placeholder: "-- เลือกหน่วยงานที่เกิดเหตุ --", 
+            allowClear: true 
+        });
+
+        // 2. ตัวเลือกจุดหมายปลายทาง (ไม่บังคับ, เป็นค่าว่างเริ่มต้น, พิมพ์เพิ่มเองได้)
+        $('.dest-selector').select2({ 
+            data: dataOptions, 
+            tags: true, 
+            placeholder: "-- เลือกหรือระบุจุดหมาย --",
+            allowClear: true
+        }).val(null).trigger('change'); // Set default เป็น blank
     }
 
     function addStaffLocation() {
@@ -213,7 +230,14 @@
                 </div>
             </div>`;
         $('#staffDestinationContainer').append(html);
-        $(`#select_${id}`).select2({ data: unitList.map(u => ({id: u, text: u})), tags: true, placeholder: "ระบุสถานที่ปลายทาง" });
+
+        const dynamicOptions = [{ id: '', text: '' }, ...unitList.map(u => ({id: u, text: u}))];
+        $(`#select_${id}`).select2({ 
+            data: dynamicOptions, 
+            tags: true, 
+            placeholder: "ระบุสถานที่ปลายทาง (ถ้ามี)",
+            allowClear: true 
+        }).val(null).trigger('change');
     }
 
     function removeEntry(id) { $(`#entry_${id}`).remove(); }
